--- a/src/app/ideation/components/ideation-create/ideation-create.component.html
+++ b/src/app/ideation/components/ideation-create/ideation-create.component.html
@@ -999,24 +999,14 @@
                 </div>
                 <div class="mobile_show" translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_IDEATION_DEADLINE_DESC">
                 </div>
-                <div class="radio_wrap ideation date_selector"
-                  [ngClass]="{selected: deadlineSelect, disabled: !canEditIdeation()}">
-                  <div class="radio_text_wrap date_selector">
-                    <div class="radio_lable_wrap" (click)="toggleDeadline();$event.stopPropagation();">
-                      <label class="checkbox" [ngClass]="{selected: deadlineSelect}">
-                        <span class="checkmark"></span>
-                        <div class="checkbox_text_wrap">
-                          <span class="bold" translate="VIEWS.IDEATION_CREATE.LBL_OPTION_DEADLINE"></span>
-                          <span class="deadline bold" *ngIf="deadlineSelect">{{deadline | date: 'YYYY-MM-dd
-                            HH:mm'}}</span>
-                        </div>
-                      </label>
+                <div class="radio_wrap ideation">
+                  <div class="radio_text_wrap">
+                    <div class="radio_lable_wrap setting_toggle">
+                      <span class="bold" translate="VIEWS.IDEATION_CREATE.LBL_DISABLE_REPLIES" [translateParams]="{value: (ideation.disableReplies ? 'TOGGLE_OFF' : 'TOGGLE_ON') | translate}"></span>
+                      <cos-toggle [(model)]="ideation.disableReplies"></cos-toggle>
                     </div>
-                    <div class="radio_description" *ngIf="deadlineSelect">
-                      <div class="date_row">
-                        <span class="deadline" translate="VIEWS.IDEATION_CREATE.LBL_TIMEZONE"></span>
-                      </div>
-
+                    <div class="radio_description">
+                      <span translate="VIEWS.IDEATION_CREATE.LBL_DISABLE_REPLIES_DESC"></span>
                     </div>
                   </div>
                 </div>
