Add label to anonymous idea form

--- a/src/app/ideation/components/add-idea/add-idea.component.html
+++ b/src/app/ideation/components/add-idea/add-idea.component.html
@@ -17,6 +17,12 @@
   <div id="post_idea_form_wrap">
     <div class="form_header">
       <span translate="COMPONENTS.ADD_IDEA.FOOTER_FORM_TITLE"></span>
+      <div id="anonymous_info_wrap" translate="COMPONENTS.ADD_IDEA.FOOTER_FORM_ANONYMOUS_INFO">
+        <div class="tooltip" tooltip>
+          <div class="content_title" translate="COMPONENTS.ADD_IDEA.TOOLTIP_ANONYMOUS_TITLE"></div>
+          <div class="content_description" translate="COMPONENTS.ADD_IDEA.TOOLTIP_ANONYMOUS_DESCRIPTION"></div>
+        </div>
+      </div>
       <div id="close_mobile" class="mobile_show">
         <button class="btn_small_close icon close_button mobile_show" (click)="close()">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
