--- a/src/app/ideation/components/idea/idea-dialog.component.html
+++ b/src/app/ideation/components/idea/idea-dialog.component.html
@@ -130,7 +130,7 @@
             </ng-container>
             <ng-container *ngIf="!idea.author">
               <div class="name_wrap">
-                <div class="name" [innerHTML]="'COMPONENTS.IDEABOX.IDEA_NUMBER' | translate:{number: ''}"></div>
+                <div class="name" [innerHTML]="'COMPONENTS.IDEABOX.IDEA_NUMBER' | translate:{number: (ideaNumber | async)}"></div>
                 <div class="date">{{idea.createdAt | date: 'YYYY-MM-dd HH:mm'}}</div>
               </div>
               <div class="vertical_line_separator"></div>
