--- a/src/app/ideation/components/ideabox/ideabox.component.scss
+++ b/src/app/ideation/components/ideabox/ideabox.component.scss
@@ -203,6 +203,8 @@
   .idea_footer {
     display: flex;
     justify-content: space-between;
+    border-top: 1px solid var(--color-dialog-ideation);
+    padding-top: 16px;
     .date {
       color: var(--color-text);
     }
