--- a/src/assets/styles/_dialog.scss
+++ b/src/assets/styles/_dialog.scss
@@ -338,6 +338,18 @@
     a {
       line-height: 32px;
     }
+
+    .actions_wrap {
+      display: flex;
+      justify-content: center;
+      gap: 24px;
+      width: 100%;
+
+      button {
+        min-width: calc(50% - 12px);
+        max-height: 100%;
+      }
+    }
   }
 
   .dialog_footer {
